Spacing fix

--- a/css/main.css
+++ b/css/main.css
@@ -91,8 +91,8 @@ font-weight:600;
 		letter-spacing:1px;
 		text-align:center;
 		margin-top: 0px;
-		margin-left: 10rem;
-		margin-right: 10rem
+		margin-left: 25rem;
+		margin-right: 25rem
 }
 
 .entirebody h2 {
